--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Amelie Lee Smorgon - Profile</title>
+  <title>Amelie - Profile</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -12,114 +12,99 @@
       background: linear-gradient(to bottom right, #fdfbfb, #ebedee);
       color: #333;
     }
+
     header {
       text-align: center;
       background: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
       padding: 3rem 1rem;
       color: white;
     }
+
     header h1 {
       margin: 0;
       font-size: 2.8rem;
       font-weight: bold;
     }
+
     header p {
-      margin: 0.5rem 0;
+      margin-top: 0.5rem;
       font-size: 1.2rem;
     }
-    .container {
-      max-width: 1000px;
+
+    section {
+      max-width: 900px;
       margin: 2rem auto;
-      padding: 0 1rem;
+      padding: 1rem;
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
     }
+
+    section h2 {
+      text-align: center;
+      font-size: 1.8rem;
+      margin-bottom: 1rem;
+      color: #444;
+    }
+
+    .info {
+      font-size: 1.1rem;
+      line-height: 1.8;
+      margin-bottom: 2rem;
+    }
+
     .photos {
       display: flex;
-      flex-wrap: wrap;
       justify-content: center;
       gap: 1.5rem;
-      margin-bottom: 2.5rem;
+      flex-wrap: wrap;
     }
+
     .photos img {
-      max-width: 300px;
-      border-radius: 16px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
-      transition: transform 0.3s ease;
+      width: 260px;
+      height: auto;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+      transition: transform 0.3s;
     }
+
     .photos img:hover {
       transform: scale(1.05);
     }
-    section {
-      background: #fff;
-      margin-bottom: 2rem;
-      padding: 2rem;
-      border-radius: 16px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      transition: transform 0.2s ease;
-    }
-    section:hover {
-      transform: translateY(-3px);
-    }
-    section h2 {
-      margin-top: 0;
-      color: #444;
-      border-bottom: 2px solid #eee;
-      padding-bottom: 0.5rem;
-    }
-    ul {
-      padding-left: 1.5rem;
-      line-height: 1.8;
-    }
+
     footer {
       text-align: center;
       padding: 1rem;
-      background: #222;
-      color: #ccc;
+      background: #f5f5f5;
+      margin-top: 2rem;
       font-size: 0.9rem;
+      color: #666;
     }
   </style>
 </head>
 <body>
   <header>
     <h1>Amelie Lee Smorgon</h1>
-    <p>金融分析师 · 投资团队负责人 · 纽约曼哈顿</p>
+    <p>CEO | Music & Travel Enthusiast | Living in the US</p>
   </header>
 
-  <div class="container">
-    <div class="photos">
-      <img src="93eacdb4-103a-4517-bffc-d16a816fb8e6.png" alt="Golf photo 1">
-      <img src="9441db8c-2b00-4bff-a651-787ac8785f62.png" alt="Golf photo 2">
-      <img src="738da129-1776-47ef-96b4-69edc01abb92.png" alt="Cafe photo">
+  <section>
+    <h2>About Me</h2>
+    <div class="info">
+      <p>👩 I’m a 40-year-old professional from Europe, currently living in the United States for 8 years.</p>
+      <p>💼 Working as a <strong>CEO in the semiconductor industry</strong>.</p>
+      <p>🎵 Passionate about <strong>music, football, and traveling</strong>.</p>
+      <p>📈 I made my first successful investment by following my mentor’s advice in university and investing in Apple stock.</p>
+      <p>🌍 Always eager to explore new cultures, new tastes, and meaningful conversations.</p>
     </div>
 
-    <section>
-      <h2>个人简介</h2>
-      <p>大家好，我是 <strong>Amelie Lee Smorgon</strong>，今年40岁，现居纽约曼哈顿。我出生于一个有着新加坡与澳大利亚血统的家族，现任金融分析师与投资团队负责人，专注于全球投资机会，帮助家族与合作伙伴实现财富增长。</p>
-    </section>
-
-    <section>
-      <h2>生活与兴趣</h2>
-      <ul>
-        <li>运动：高尔夫、网球、骑马、滑雪、冲浪、游泳、健身、瑜伽</li>
-        <li>艺术：绘画收藏、摄影、钢琴、调酒</li>
-        <li>生活：品酒、美食探索、旅行</li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>价值观与人生观</h2>
-      <p>我相信自由与独立是最宝贵的财富。无论在生活还是事业中，我坚持诚信、勇敢和持续成长。我认为真正的成功不仅在于财富积累，更在于对社会的责任与贡献。慈善和家庭价值观在我的人生中占有重要位置。</p>
-    </section>
-
-    <section>
-      <h2>家族与事业</h2>
-      <p>我来自澳大利亚著名的 <strong>Smorgon 家族</strong>，家族事业涵盖钢铁、房地产、投资与环保等多个领域。我带领的投资团队近年来实现了超过150%的回报率。我希望通过我的专业与努力，不仅创造财富，也为社会带来积极的影响。</p>
-    </section>
-
-    <section>
-      <h2>我的目标</h2>
-      <p>我的目标是在未来两年内实现更高程度的财富自由，让自己拥有更多时间去探索世界、旅行、享受艺术，并寻找志同道合的伴侣，共同创造属于我们的美好人生。</p>
-    </section>
-  </div>
+    <h2>Gallery</h2>
+    <div class="photos">
+      <img src="./golf1.png" alt="Golf photo 1">
+      <img src="./golf2.png" alt="Golf photo 2">
+      <img src="./cafe.png" alt="Cafe photo">
+    </div>
+  </section>
 
   <footer>
     <p>© 2025 Amelie Lee Smorgon | All Rights Reserved</p>
